# test_task_hitalent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/db/: config.py  database.py
app/exceptions/: exceptions.py
app/migration/: env.py
app/migration/versions/: beeff536b671_initial_revision.py
app/models/: department.py  employee.py
app/repositories/: department.py  employee.py
app/schemas/: department.py  employee.py
app/services/: __init__.py  department.py  employee.py
