[project]
name = "test-task-hitalent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.133.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
